--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Jan Mrkva</title>
+  <title>Damian Adamjak</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
   <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">Clarence Taylor</a>
+    <a class="navbar-brand" href="#">Damian Adamjak</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -45,9 +45,9 @@
 
     <section id="about">
       <div class="jumbotron">
-        <h1>Jan Mrkva</h1>
+        <h1>Damian Adamjak</h1>
         <div class="subheading">
-          3542 BERRY STREET · CHEYENNE WELLS, CO 80810 · (317) 585-8468 · NAME@EMAIL.COM
+          Moziarska 1460/3 · Kezmarok, 06001  · +421 949 689 985 · NAME@EMAIL.COM
         </div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam volutpat sapien ac facilisis efficitur. Integer faucibus
