--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="#about">O mne</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#education">Education</a>
+          <a class="nav-link" href="#education">Vzdelanie</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#skills">Skills</a>
@@ -43,11 +43,11 @@
 
   <div class="container mt-5">
 
-    <section id="about">
+    <section id="O mne">
       <div class="jumbotron">
         <h1>Damian Adamjak</h1>
         <div class="subheading">
-          Moziarska 1460/3 · Kezmarok, 06001  · +421 949 689 985 · NAME@EMAIL.COM
+          Moziarska 1460/3 · Kezmarok, 06001  · +421 949 689 985 · dadysko7@gmail.com
         </div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam volutpat sapien ac facilisis efficitur. Integer faucibus
@@ -109,14 +109,12 @@
       </div>
     </section>
 
-    <section id="education">
-      <h2>Education</h2>
+    <section id="Vzdelanie">
+      <h2>Vzdelanie</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam volutpat sapien ac facilisis efficitur. Integer faucibus
-        eros congue arcu volutpat, et consequat lectus placerat. Donec pellentesque turpis sit amet elit rutrum tincidunt.
-        Etiam eget rutrum dolor. Curabitur auctor vel purus in faucibus. Fusce pellentesque eros venenatis, suscipit ex quis,
-        facilisis nunc. In in turpis ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dolor mi,
-        rhoncus sed lorem eget, feugiat mattis risus. Praesent nibh velit, dapibus vitae nulla ut, tempus accumsan ipsum.
+        2012-2021 - ZS Grundschule, Kezmarok 
+        2012-2021 - ZUS Antona Cigera, Kezmarok 
+        2021-2025 - SPS Techniky a Dizajnu, Poprad 
       </p>
     </section>
 
@@ -132,7 +130,7 @@
     </section>
 
     <section id="contact">
-      <h2>Interests</h2>
+      <h2>Zaujmy</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam volutpat sapien ac facilisis efficitur. Integer faucibus
         eros congue arcu volutpat, et consequat lectus placerat. Donec pellentesque turpis sit amet elit rutrum tincidunt.
