--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="#about">O mne</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#experience">Experience</a>
+          <a class="nav-link" href="#experience">Skusenosti</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#education">Vzdelanie</a>
@@ -32,10 +32,10 @@
           <a class="nav-link" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#interests">Interests</a>
+          <a class="nav-link" href="#interests">Zaujmy</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link" href="#contact">Kontakt</a>
         </li>
       </ul>
     </div>
@@ -60,8 +60,8 @@
       </div>
     </section>
 
-    <section id="experience">
-      <h2>Experience</h2>
+    <section id="Skusenosti">
+      <h2>Skusenosti</h2>
       <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
         <div>
           <h3>Senior Web Developer</h3>
@@ -113,7 +113,9 @@
       <h2>Vzdelanie</h2>
       <p>
         2012-2021 - ZS Grundschule, Kezmarok 
+
         2012-2021 - ZUS Antona Cigera, Kezmarok 
+        
         2021-2025 - SPS Techniky a Dizajnu, Poprad 
       </p>
     </section>
@@ -140,8 +142,8 @@
       </p>
     </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
+    <section id="Kontakt">
+      <h2>Kontakt</h2>
       <form>
         <div class="form-group">
           <label for="email">Email:</label>
