--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
           <a class="nav-link" href="#about">O mne</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#experience">Skusenosti</a>
+          <a class="nav-link" href="#experience">Skúsenosti</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#education">Vzdelanie</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#skills">Skills</a>
+          <a class="nav-link" href="#skills">Zručnosti</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#interests">Zaujmy</a>
+          <a class="nav-link" href="#interests">Záujmy</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Kontakt</a>
@@ -47,21 +47,17 @@
       <div class="jumbotron">
         <h1>Damian Adamjak</h1>
         <div class="subheading">
-          Moziarska 1460/3 · Kezmarok, 06001  · +421 949 689 985 · dadysko7@gmail.com
+          Možiarska 1460/3 · Kežmarok, 06001  · +421 949 689 985 · dadysko7@gmail.com
         </div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam volutpat sapien ac facilisis efficitur. Integer faucibus
-          eros congue arcu volutpat, et consequat lectus placerat. Donec pellentesque turpis sit amet elit rutrum tincidunt.
-          Etiam eget rutrum dolor. Curabitur auctor vel purus in faucibus. Fusce pellentesque eros venenatis, suscipit ex
-          quis, facilisis nunc. In in turpis ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dolor
-          mi, rhoncus sed lorem eget, feugiat mattis risus. Praesent nibh velit, dapibus vitae nulla ut, tempus accumsan
-          ipsum.
+          Volám sa Damián Adamjak, mám 17 rokov. Považujem sa za človeka, ktorý je kreatívny, sebavedomý, flexibilný a vie pracovať pod 
+          stresom. Patrím medzi kreatívne a pozitívne naladené osoby. Mám rád výzvy a nebojím sa ísť do nových vecí.
         </p>
       </div>
     </section>
 
-    <section id="Skusenosti">
-      <h2>Skusenosti</h2>
+    <section id="Skúsenosti">
+      <h2>Skúsenosti</h2>
       <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
         <div>
           <h3>Senior Web Developer</h3>
@@ -115,13 +111,13 @@
         2012-2021 - ZS Grundschule, Kezmarok 
 
         2012-2021 - ZUS Antona Cigera, Kezmarok 
-        
+
         2021-2025 - SPS Techniky a Dizajnu, Poprad 
       </p>
     </section>
 
-    <section id="skills">
-      <h2>Skills</h2>
+    <section id="Zručnosti">
+      <h2>Zručnosti</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam volutpat sapien ac facilisis efficitur. Integer faucibus
         eros congue arcu volutpat, et consequat lectus placerat. Donec pellentesque turpis sit amet elit rutrum tincidunt.
@@ -131,8 +127,8 @@
       </p>
     </section>
 
-    <section id="contact">
-      <h2>Zaujmy</h2>
+    <section id="Záujmy">
+      <h2>Záujmy</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam volutpat sapien ac facilisis efficitur. Integer faucibus
         eros congue arcu volutpat, et consequat lectus placerat. Donec pellentesque turpis sit amet elit rutrum tincidunt.
