--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Damian Adamjak</title>
+  <title>Damián Adamjak</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
   <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">Damian Adamjak</a>
+    <a class="navbar-brand" href="#">Damián Adamjak</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -45,9 +45,9 @@
 
     <section id="O mne">
       <div class="jumbotron">
-        <h1>Damian Adamjak</h1>
+        <h1>Damián Adamjak</h1>
         <div class="subheading">
-          Možiarska 1460/3 · Kežmarok, 06001  · +421 949 689 985 · dadysko7@gmail.com
+          Možiarska 1460/3 · Kežmarok, 060 01  · +421 949 689 985 · dadysko7@gmail.com
         </div>
         <p>
           Volám sa Damián Adamjak, mám 17 rokov. Považujem sa za človeka, ktorý je kreatívny, sebavedomý, flexibilný a vie pracovať pod 
