--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#about">O mne</a>
+          <a class="nav-link" href="#O mne">O mne</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#experience">Skúsenosti</a>
+          <a class="nav-link" href="Skúsenosti">Skúsenosti</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#education">Vzdelanie</a>
+          <a class="nav-link" href="#Vzdelanie">Vzdelanie</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#skills">Schopnosti</a>
+          <a class="nav-link" href="#Schopnosti">Schopnosti</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#interests">Záujmy</a>
+          <a class="nav-link" href="#Záujmy">Záujmy</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Kontakt</a>
+          <a class="nav-link" href="#Kontakt">Kontakt</a>
         </li>
       </ul>
     </div>
