--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="#O mne">O mne</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Skúsenosti">Skúsenosti</a>
+          <a class="nav-link" href="#Skúsenosti">Skúsenosti</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#Vzdelanie">Vzdelanie</a>
