--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <section id="O mne">
       <div class="jumbotron">
         <h1>Damián Adamjak</h1>
+        <i class="fa-regular fa-user fa-beat"></i>
         <div class="subheading">
           Možiarska 1460/3 · Kežmarok, 060 01  · +421 949 689 985 · dadysko7@gmail.com
         </div>
@@ -148,7 +149,7 @@
           <label for="msg">Message:</label>
           <textarea class="form-control" rows="5" id="msg"></textarea>
         </div>
-        <button type="submit" class="btn btn-dark">Submit</button>
+        <button type="submit" class="btn btn-dark">Odoslať</button>
       </form>
     </section>
 
