--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link rel="stylesheet" href="main.css">
 </head>
+  <i class="fa-regular fa-user fa-beat"></i>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
