--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link rel="stylesheet" href="main.css">
 </head>
-  <i class="fa-regular fa-user fa-beat"></i>
+  
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
@@ -47,7 +47,8 @@
     <section id="O mne">
       <div class="jumbotron">
         <h1>Damián Adamjak</h1>
-        <i class="fa-regular fa-user fa-beat"></i>
+      <div class="container">
+        <i class="fa-regular fa-user"></i>
         <div class="subheading">
           Možiarska 1460/3 · Kežmarok, 060 01  · +421 949 689 985 · dadysko7@gmail.com
         </div>
