--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
     <section id="O mne">
       <div class="jumbotron">
         <h1>Damián Adamjak</h1>
-      <div class="container">
-        <i class="fa-regular fa-user"></i>
+        <div class="container">
+
+             <i class="fa-regular fa-user"></i>
+        
+        </div>     
+        
         <div class="subheading">
           Možiarska 1460/3 · Kežmarok, 060 01  · +421 949 689 985 · dadysko7@gmail.com
         </div>
