--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link rel="stylesheet" href="main.css">
+  <script src="https://kit.fontawesome.com/088f76ffe1.js" crossorigin="anonymous"></script>
 </head>
   
 
@@ -49,7 +50,7 @@
         <h1>Damián Adamjak</h1>
         <div class="container">
 
-             <i class="fa-regular fa-user"></i>
+            <i class="fa-solid fa-user"></i>
         
         </div>     
         
