--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
       <div class="jumbotron">
         <h1>Damián Adamjak</h1>
         <div class="container">
-
-            <i class="fa-solid fa-user"></i>
+          <span style="font-size: 48px; color: Dodgerblue;"></span>
+             <i class="fa-solid fa-user"></i>
+          </span>
         
         </div>     
         
