--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       <div class="jumbotron">
         <h1>Damián Adamjak</h1>
         <div class="container">
-          <span style="font-size: 48px; color: Dodgerblue;"></span>
+        
+          <span style="font-size: 100px; color: Dodgerblue;">
              <i class="fa-solid fa-user"></i>
           </span>
         
