--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
     <section id="O mne">
       <div class="jumbotron">
-        <div style = "position:relative; left:80px; top:10px;
+        
+        <div style = "position:relative; left:150px; top:50px; background-color:yellow;">
             Damián Adamjak
        
        <div class="container">
