--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="O mne">
      <div class="jumbotron">
       <div>
-        <span style="font-size: 35x; color: rgb(22, 59, 97);">
+        <span style="font-size: 40x; color: rgb(22, 59, 97);">
           <i class="fa-solid fa-briefcase"></i>
        </span>
         <span class="nadpis">Damián Adamjak</span> 
@@ -71,7 +71,7 @@
 
     <section id="Skúsenosti">
     <div>
-      <span style="font-size: 35x; color: rgb(22, 59, 97);">
+      <span style="font-size: 40x; color: rgb(22, 59, 97);">
         <i class="fa-solid fa-briefcase"></i>
      </span>
       <span class="nadpis">Skúsenosti</span> 
@@ -114,10 +114,10 @@
     </section>
     <section id="Vzdelanie">
       <div>
-        <span style="font-size: 35x; color: rgb(22, 59, 97);">
+        <span style="font-size: 40x; color: rgb(22, 59, 97);">
           <i class="fa-solid fa-briefcase"></i>
        </span>
-        <span class="nadpis">Skúsenosti</span> 
+        <span class="nadpis">Vzdelanie</span> 
        </div>
 
       <p>
@@ -132,7 +132,7 @@
     </section>
 
     <section id="Schopnosti">
-      <span style="font-size: 35px; color: rgb(22, 59, 97);">
+      <span style="font-size: 40px; color: rgb(22, 59, 97);">
         <i class="fa-solid fa-hammer"></i>
      </span>
       <h2>Schopnosti</h2>
@@ -159,10 +159,13 @@
 
     <section id="Záujmy">
     
-      <span style="font-size: 35px; color: rgb(22, 59, 97);">
-        <i class="fa-solid fa-bolt-lightning"></i>
-     </span>
-      <h2>Záujmy</h2>
+      <div>
+        <span style="font-size: 40x; color: rgb(22, 59, 97);">
+          <i class="fa-solid fa-briefcase"></i>
+       </span>
+        <span class="nadpis">Záujmy</span> 
+       </div>
+
       <p>
         Medzi moje záujmy patrí umenie a tvorenie kreativných vecí. Umeniu sa venujem asi už 12 rokov a digitálnej grafike asi 6.
         Okrem grafiky sa venujem aj video editingu, ktorému sa tiež venujem okolo 3 rokoch. Mezi moje ďalšie záujmy patrí: počúvanie
@@ -171,10 +174,13 @@
     </section>
 
     <section id="Kontakt">
-      <span style="font-size: 35px; color: rgb(22, 59, 97);">
-        <i class="fa-solid fa-address-card"></i>
-     </span>
-      <h2>Kontakt</h2>
+      <div>
+        <span style="font-size: 40x; color: rgb(22, 59, 97);">
+          <i class="fa-solid fa-briefcase"></i>
+       </span>
+        <span class="nadpis">Kontakt</span> 
+       </div>
+
       <form>
         <div class="form-group">
           <label for="email">Email:</label>
