--- a/index.html
+++ b/index.html
@@ -132,10 +132,14 @@
     </section>
 
     <section id="Schopnosti">
-      <span style="font-size: 40px; color: rgb(22, 59, 97);">
-        <i class="fa-solid fa-hammer"></i>
-     </span>
-      <h2>Schopnosti</h2>
+      
+      <div>
+        <span style="font-size: 35x; color: rgb(22, 59, 97);">
+          <i class="fa-solid fa-briefcase"></i>
+       </span>
+        <span class="nadpis">Schopnosti</span> 
+      </div>
+
       <p>
         Adobe Photoshop - Profesionálny ★★★★
         <br>
